<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="@string/brand"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/textResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupRoom"
        android:layout_width="201dp"
        android:layout_height="179dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent">


        <RadioButton
            android:id="@+id/radioRoomOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:checked="true"
            android:text="@string/onebedroom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioRoomTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/twobedroom"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioBathOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="@string/onebathroom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioRoomTwo" />

        <RadioButton
            android:id="@+id/radioBathTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="@string/twobathroom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioBathOne"
            app:layout_constraintVertical_bias="0.499" />


    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="355dp"
        android:layout_height="137dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/antokulogo" />

    <TextView
        android:id="@+id/textResults"
        android:layout_width="277dp"
        android:layout_height="138dp"

        android:layout_marginTop="29dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>